# texture-replacer

./: .gitignore  build-containers.sh
asset-replacer-api/: .env  Cargo.toml  README.md  build-container.sh  docker-compose.yml  flyway.conf
asset-replacer-api/migrations/2022-11-05-210553_init/: down.sql  up.sql
asset-replacer-api/migrations/2022-11-05-234241_create_region/: down.sql  up.sql
asset-replacer-api/migrations/2022-11-05-234359_create_platform/: down.sql  up.sql
asset-replacer-api/migrations/2022-11-05-234448_create_platform_release/: down.sql  up.sql
asset-replacer-api/migrations/2022-11-05-234535_create_title/: up.sql
asset-replacer-api/migrations/2022-11-05-234624_create_title_release/: down.sql  up.sql
asset-replacer-api/migrations/2022-11-05-234713_create_asset_type/: down.sql  up.sql
asset-replacer-api/migrations/2022-11-05-234826_create_asset/: up.sql
asset-replacer-api/migrations/2022-11-05-235011_create_role/: down.sql  up.sql
asset-replacer-api/migrations/2022-11-05-235056_create_user/: up.sql
asset-replacer-api/migrations/2022-11-05-235149_insert_platforms/: down.sql  up.sql
asset-replacer-api/migrations/2022-11-06-000150_insert_platform_release/: down.sql  up.sql
asset-replacer-api/sql/: V1_0__ddl_create_data.sql  V1__init.sql
asset-replacer-api/src/: main.rs
texture-replacer-api/: Cargo.toml  Dockerfile  README.md  build-container.sh  docker-compose.yml  flyway.conf
texture-replacer-api/sql/: V1_0__ddl_create_data.sql
texture-replacer-api/src/: main.rs
texture-replacer-api/src/schema/: mod.rs
(+1 files in other folders)
