[package]
name = "texture-replacer-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.5.0-rc.2"
chrono = "0.4"
juniper = { version = "0.15.10", features = ["chrono-tz"] }
juniper_rocket = "0.8.2"
